[gd_scene load_steps=2 format=3 uid="uid://liyjkjo086io"]

[ext_resource type="Script" uid="uid://np28ydesmmea" path="res://ui/hud/teammate_status_card.gd" id="1"]

[node name="TeammateStatusCard" type="PanelContainer"]
custom_minimum_size = Vector2(200, 100)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PlayerNameLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "Player Name"

[node name="ScoreLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Score: 0"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "âœ“ Alive"
